build/log/idf_py_stdout_output_57829
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/stefan/esp/esp-smart-home/build/bootloader/esp-idf/esptool_py && /home/stefan/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/stefan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/stefan/esp/esp-smart-home/build/bootloader/bootloader.bin
Bootloader binary size 0x6870 bytes. 0x790 bytes (7%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi_ap_example.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/wifi_ap_example.c.obj 
/home/stefan/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-1724-ga5b261f699\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/stefan/esp/esp-smart-home/include -I/home/stefan/esp/esp-smart-home/build/config -I/home/stefan/esp/esp-smart-home/main -I/home/stefan/esp/esp-idf/components/newlib/platform_include -I/home/stefan/esp/esp-idf/components/freertos/config/include -I/home/stefan/esp/esp-idf/components/freertos/config/include/freertos -I/home/stefan/esp/esp-idf/components/freertos/config/xtensa/include -I/home/stefan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/stefan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/stefan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/stefan/esp/esp-idf/components/freertos/esp_additions/include -I/home/stefan/esp/esp-idf/components/esp_hw_support/include -I/home/stefan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/stefan/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/stefan/esp/esp-idf/components/esp_hw_support/dma/include -I/home/stefan/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/stefan/esp/esp-idf/components/heap/include -I/home/stefan/esp/esp-idf/components/log/include -I/home/stefan/esp/esp-idf/components/soc/include -I/home/stefan/esp/esp-idf/components/soc/esp32 -I/home/stefan/esp/esp-idf/components/soc/esp32/include -I/home/stefan/esp/esp-idf/components/hal/platform_port/include -I/home/stefan/esp/esp-idf/components/hal/esp32/include -I/home/stefan/esp/esp-idf/components/hal/include -I/home/stefan/esp/esp-idf/components/esp_rom/include -I/home/stefan/esp/esp-idf/components/esp_rom/include/esp32 -I/home/stefan/esp/esp-idf/components/esp_rom/esp32 -I/home/stefan/esp/esp-idf/components/esp_common/include -I/home/stefan/esp/esp-idf/components/esp_system/include -I/home/stefan/esp/esp-idf/components/esp_system/port/soc -I/home/stefan/esp/esp-idf/components/esp_system/port/include/private -I/home/stefan/esp/esp-idf/components/xtensa/esp32/include -I/home/stefan/esp/esp-idf/components/xtensa/include -I/home/stefan/esp/esp-idf/components/xtensa/deprecated_include -I/home/stefan/esp/esp-idf/components/lwip/include -I/home/stefan/esp/esp-idf/components/lwip/include/apps -I/home/stefan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/stefan/esp/esp-idf/components/lwip/lwip/src/include -I/home/stefan/esp/esp-idf/components/lwip/port/include -I/home/stefan/esp/esp-idf/components/lwip/port/freertos/include -I/home/stefan/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/stefan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/stefan/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/stefan/esp/esp-smart-home/components/smart-home-alpha/includes -I/home/stefan/esp/esp-idf/components/driver/deprecated -I/home/stefan/esp/esp-idf/components/driver/i2c/include -I/home/stefan/esp/esp-idf/components/driver/touch_sensor/include -I/home/stefan/esp/esp-idf/components/driver/twai/include -I/home/stefan/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/stefan/esp/esp-idf/components/esp_pm/include -I/home/stefan/esp/esp-idf/components/esp_ringbuf/include -I/home/stefan/esp/esp-idf/components/esp_driver_gpio/include -I/home/stefan/esp/esp-idf/components/esp_driver_pcnt/include -I/home/stefan/esp/esp-idf/components/esp_driver_gptimer/include -I/home/stefan/esp/esp-idf/components/esp_driver_spi/include -I/home/stefan/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/stefan/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/stefan/esp/esp-idf/components/esp_driver_i2s/include -I/home/stefan/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/stefan/esp/esp-idf/components/sdmmc/include -I/home/stefan/esp/esp-idf/components/esp_driver_sdspi/include -I/home/stefan/esp/esp-idf/components/esp_driver_sdio/include -I/home/stefan/esp/esp-idf/components/esp_driver_dac/include -I/home/stefan/esp/esp-idf/components/esp_driver_rmt/include -I/home/stefan/esp/esp-idf/components/esp_driver_tsens/include -I/home/stefan/esp/esp-idf/components/esp_driver_sdm/include -I/home/stefan/esp/esp-idf/components/esp_driver_i2c/include -I/home/stefan/esp/esp-idf/components/esp_driver_uart/include -I/home/stefan/esp/esp-idf/components/vfs/include -I/home/stefan/esp/esp-idf/components/esp_driver_ledc/include -I/home/stefan/esp/esp-idf/components/esp_driver_parlio/include -I/home/stefan/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/stefan/esp/esp-smart-home/components/esp-idf-lib/components/dht -I/home/stefan/esp/esp-smart-home/components/esp-idf-lib/components/esp_idf_lib_helpers -I/home/stefan/esp/esp-idf/components/esp_adc/include -I/home/stefan/esp/esp-idf/components/esp_adc/interface -I/home/stefan/esp/esp-idf/components/esp_adc/esp32/include -I/home/stefan/esp/esp-idf/components/esp_adc/deprecated/include -I/home/stefan/esp/esp-idf/components/esp_wifi/include -I/home/stefan/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/stefan/esp/esp-idf/components/esp_event/include -I/home/stefan/esp/esp-idf/components/esp_phy/include -I/home/stefan/esp/esp-idf/components/esp_phy/esp32/include -I/home/stefan/esp/esp-idf/components/esp_netif/include -I/home/stefan/esp/esp-idf/components/nvs_flash/include -I/home/stefan/esp/esp-idf/components/spi_flash/include -I/home/stefan/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/stefan/esp/esp-smart-home=. -fmacro-prefix-map=/home/stefan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/wifi_ap_example.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/wifi_ap_example.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/wifi_ap_example.c.obj -c /home/stefan/esp/esp-smart-home/main/wifi_ap_example.c
In file included from /home/stefan/esp/esp-smart-home/main/wifi_ap_example.c:7:
/home/stefan/esp/esp-idf/components/esp_event/include/esp_event_loop.h:9:2: warning: #warning "esp_event_loop.h is deprecated, please include esp_event.h instead" [-Wcpp]
    9 | #warning "esp_event_loop.h is deprecated, please include esp_event.h instead"
      |  ^~~~~~~
/home/stefan/esp/esp-smart-home/main/wifi_ap_example.c: In function 'event_handler':
/home/stefan/esp/esp-smart-home/main/wifi_ap_example.c:24:43: warning: unused variable 'event' [-Wunused-variable]
   24 |             wifi_event_ap_staconnected_t *event = (wifi_event_ap_staconnected_t *)event_data;
      |                                           ^~~~~
/home/stefan/esp/esp-smart-home/main/wifi_ap_example.c:34:46: warning: unused variable 'event' [-Wunused-variable]
   34 |             wifi_event_ap_stadisconnected_t *event = (wifi_event_ap_stadisconnected_t *)event_data;
      |                                              ^~~~~
/home/stefan/esp/esp-smart-home/main/wifi_ap_example.c: In function 'wifi_init_softap':
/home/stefan/esp/esp-smart-home/main/wifi_ap_example.c:55:5: error: implicit declaration of function 'tcpip_adapter_init' [-Werror=implicit-function-declaration]
   55 |     tcpip_adapter_init();  // Initialize TCP/IP stack
      |     ^~~~~~~~~~~~~~~~~~
In file included from /home/stefan/esp/esp-idf/components/esp_system/include/esp_system.h:12,
                 from /home/stefan/esp/esp-smart-home/main/wifi_ap_example.c:3:
/home/stefan/esp/esp-smart-home/main/wifi_ap_example.c:57:21: error: implicit declaration of function 'esp_event_loop_init'; did you mean 'esp_event_loop_run'? [-Werror=implicit-function-declaration]
   57 |     ESP_ERROR_CHECK(esp_event_loop_init(event_handler, NULL));  // Initialize event handler
      |                     ^~~~~~~~~~~~~~~~~~~
/home/stefan/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
cc1: some warnings being treated as errors
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
